--- a/Css/style.css
+++ b/Css/style.css
@@ -18,7 +18,7 @@ header{
     font-family: cursive;
     font-style:oblique;
     background-color:#1c2841;
-    opacity: 0.9;
+    opacity: 1.5;
     
 }
 nav  span{
@@ -79,71 +79,70 @@ nav  span{
     font-size:25px;
     text-align:center;
     color:#4169e1;
+    
 }
 
 p {
      margin:0%;
-     text-align:center;
+     text-align:left;
+     font-weight: bold;
+     font-size: 20px;
+     
 }   
 
 
 
 .image{
-    width: 100%;
-    height:500px;
-    border-radius: 25px;
-    border: 6px solid silver;
+    width: 500px;
+    height:300px;
     border-style:groove;
-    max-width: 90vw;
-    margin: auto;
+    border-radius:20%;
+    float:right;
+    margin-right:20px;
+    
 }
 #item1 {
-    
     width:100%;
-    height: 900px;
-    text-align:center;
-    margin-top:0px;
+    height:500px;
+    text-align: center;
     padding-top:40px;
     background-color:  rgb(77, 89, 102);
-    font-weight:lighter;
+   
 }
 
 #item2{
     width:100%;
-    height: 900px;
-    text-align:center;                   /* bootstrap code overrides css, it makes a mobile first fluid grid system
-                                                             but it does not look  center aligned on desktop*/
-    
+    height:500px;
+    text-align:center;                   
     padding-top:40px;
     background-color: rgb(231, 150, 0);
-    margin: 
+    
 }
 
 #item3 {
     width:100%;
-    height: 900px;
+    height:500px;
     text-align:center;
-    margin-top:0px;
     padding-top:40px;
     background-color:  #7a2630;
-    background-blend-mode:lighten;
+    
 }
 #item4 {
-    margin-top:0px;
     padding-top:40px;
     width:100%;
-    height: 900px;
+    height:500px;
     text-align:center;
     background-color: rgb(62, 91, 95);
+    
 }
                               
 #item5{
-    margin-top:0px;
     width:100%;
-    height: 900px;
+    height:500px;
     text-align:center;
     padding-top:40px;
     background-color: #602F44;
+    
 }
 
                               /*footer styling*/  
@@ -163,7 +162,6 @@ footer{
      font-style:italic;
 }
   .icon-bar  {
-    
     text-align:center;
     margin-top: 10px;
 }
