--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,8 @@
 body {
     width:100% ! important;
     height:100%; 
-    
+    display:block;
+    margin: 0;
 }
 .wrapper ::-webkit-scrollbar 
     {
@@ -177,8 +178,50 @@ footer{
     
 }
  
+.layout {
+    width:100%;
+    height:500px;
+    background-image: url(https://ulule.me/presales/6421/roma-29.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100% 90%;
+    margin-bottom: 20px;
+}
+
+#footer2{
+     padding-top:50px;
+     height: 80px;
+
+ }    
+
+ .signup-form{
+     margin-top:120px;
+     max-width: 500px;
+     color: #fff;
+     background-color:rgba(60, 60, 60, 0.644);
+     position: absolute;
+     padding:10px;
+     border: 1px solid black;
+     left: 80px;
+     display: flex;
+ }
+
+.text-input{
+     font-size: 20px;
+     font-weight: bold;
+      vertical-align:middle;
+    
+ }
+
+.join-button{
+     color:blue;
+     margin: 5px;
+     font-size:15px;
+     margin-left:40%;
+     cursor: pointer;
+     border-radius:3px;
+ }
+
  
-     
 
      
 
