--- a/Css/style.css
+++ b/Css/style.css
@@ -2,7 +2,7 @@ body {
     width:100% ! important;
     height:100%; 
     display:block;
-    margin: 0;
+    margin:0px;
 }
 
                          /*  CSS multi-line  */
@@ -184,8 +184,8 @@ footer{
 }
 
 #footer2{
-     padding-top:50px;
-     height: 80px;
+     padding-top:40px;
+     height:80px;
 
  }    
 
@@ -197,7 +197,7 @@ footer{
      padding:20px;
      border: 1px solid black;
      left:60px;
-     
+     box-shadow:2px 2px gray;
  }
 
 .text-input{
