--- a/Css/style.css
+++ b/Css/style.css
@@ -98,17 +98,24 @@ li {
     font-weight:unset;
 }
 
+
 .section-container{
     width:100%;
     min-height: 500px;
     text-align:center;
     padding:40px;
 }
+
+h2 {
+    color:rgb(46, 32, 32);
+}
+
 #item1 {
     
     background-color:  rgb(77, 89, 102);
-   
-}
+   }
+
+
 
 #item2{
     
@@ -150,22 +157,22 @@ footer{
      font-style:italic;
      text-align: center;
 }
-  .icon-bar  {
+.icon-bar  {
     text-align:center;
     margin-top: 10px;
 }
-  .icon-bar a{
+.icon-bar a{
     color: white;
     font-size:30px;
     padding: 7px;
 }
 
-  .icon-bar a:hover {
+.icon-bar a:hover {
     color: rgb(172, 172, 197);  
     
 }
  
-.layout {
+.layout{
     width:100%;
     height:100vh;
     background-image: url(https://ulule.me/presales/6421/roma-29.jpeg);
@@ -182,10 +189,10 @@ footer{
      height:80px;
 }    
 
-.signup-form{
+ .signup-form{
      color: #fff;
      background-color:rgba(60, 60, 60, 0.644);
-     padding:90px;
+     padding:60px;
      border: 1px solid black;
      left:60px;
      box-shadow:2px 2px black;
@@ -207,7 +214,12 @@ footer{
      border-radius:3px;
  }
 
- 
+ .section-gallery{
+    width:100%;
+    height:100vh;
+    margin-bottom:10px;
+    display:flex;
+ }
 
      
 
