--- a/Css/style.css
+++ b/Css/style.css
@@ -205,6 +205,13 @@ footer{
      
  }
 
+.message-input {
+    font-size: 20px;
+    padding-bottom: 80px;
+    margin-top: 30px;
+    width: 235px;
+}
+
 .join-button{
      color:blue;
      margin: 5px;
