--- a/Css/style.css
+++ b/Css/style.css
@@ -240,33 +240,36 @@ footer{
      border-radius:3px;
  }
 
- .layout-gallery{
+.layout-gallery{
     width:100%;
     height:auto;
     background-color:rgb(240 240 241);
+
  }
 
- .image-gallery{   
+.text-gallery{
+     text-align:center;
+     text-shadow: 2px 0px gray;
+     font-size: 70px;
+ }
+.image-gallery{   
     column-count:3;
-    column-gap: 2px;
-    
+    column-gap:0px;
+    padding-right:10px;
+    cursor:pointer;
 }
 
 .photos-gallery{
-    margin:1px 1px;
-    vertical-align:bottom;
-}
-
-#footer-gallery{
-    padding-top: 10px;
-    height:100px;
-}
-
-.photos-gallery{
-    max-width:300px;
+    width:100%;
     height:250px;
-    
+    margin:1px 1px;
 }
+
+.photos-gallery:hover{
+    border:1px solid #070f25;
+}
+
+
 
 
 
