--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,18 @@
-body {
-    width:100% ! important;
+body   {
+    width:100% !important; 
     height:100%; 
-    display:block;
     margin:0px;
+    display:block;
+}
+* {
+  box-sizing: border-box;
 }
 
                          /*  CSS multi-line  */
 
 header{
     width:100%;
+    height:100px;
     text-align:left;
     font-family: cursive;
     font-style:oblique;
@@ -22,26 +26,38 @@ div  span{
     
 }
 
+.navbar-dark  {
+    background-color:#1c2841 !important;
+    display: block;
+}
+.navbar-brand{
+    display: block;
+}
+
+
+
+
+
 .conteiner{
-    width:100%;
+    max-width:100%;
     height: 595px;
     background: url(https://www.csoalastrada.net/core-online/wp-content/uploads/2015/10/Roma-in-nero.jpg); 
     background-repeat:no-repeat ;
     background-size: cover;
+    position:relative;
     padding:0.2px;
     background-attachment: fixed;
-    box-sizing: border-box;
     transition:ease-out;
-
+    overflow: hidden;
     animation-name:container-image-outer;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    animation-fill-mode:forwards;
  }
 
 #container-image-outer{
-    width: 100%;
-    height: 595;
-    overflow:hidden;
+    width: auto;
+    
+    
 }
 
  @keyframes container-image-outer  {
@@ -49,7 +65,7 @@ div  span{
         transform: scale(1);
     }
     to{
-        transform: scale(1.1);
+        transform: scale(1.05);
     }
 }
  
@@ -65,7 +81,7 @@ div  span{
 }
 
 .info{
-    float: right;
+    float: right !important;
     font-size: 15px;
     word-spacing: 1.5em;
     padding-right:10px;
@@ -117,11 +133,13 @@ li {
 }
 
 
+
 .section-container{
     width:100%;
     min-height: 500px;
     text-align:center;
     padding:40px;
+    clear:both;
 }
 
 h2 {
@@ -130,7 +148,7 @@ h2 {
 
 #item1 {
     
-    background-color: rgb(77, 89, 102);
+    background-color: rgb(72 75 78);
    }
 
 
@@ -166,7 +184,7 @@ footer{
     width:100%;
     background-color:#1c2841;
     font-weight:lighter;
-    
+    clear: both;
 }                          
 
  #footer{
@@ -175,14 +193,14 @@ footer{
      font-style:italic;
      text-align: center;
 }
-.icon-bar  {
+.icon-bar {
     text-align:center;
     margin-top: 10px;
 }
 .icon-bar a{
     color: white;
-    font-size:30px;
-    padding: 7px;
+    font-size:25px;
+    padding: 6px;
 }
 
 .icon-bar a:hover {
@@ -255,19 +273,29 @@ footer{
 .image-gallery{   
     column-count:3;
     column-gap:0px;
-    padding-right:10px;
+    margin-left: auto;
+    margin-right: auto;
     cursor:pointer;
+    display:block;
 }
 
-.photos-gallery{
+.photo-gallery{
     width:100%;
-    height:250px;
-    margin:1px 1px;
+    height:100%;
+    border:1px solid #d6c9c9;
+    border-radius:2px;
+    padding:5px;
+    
+    
 }
 
-.photos-gallery:hover{
-    border:1px solid #070f25;
+
+
+.photo-gallery:hover{
+    box-shadow: 0px 0px  1px 2px rgba(19, 47, 102, 0.5);
 }
+    
+
 
 
 
