--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body   {
-    width:100% !important; 
+    max-width: 100% !important; 
     height:100%; 
     margin:0px;
     display:block;
@@ -19,7 +19,7 @@ main {
 }
 
 header{
-    width:100vw;
+    width:100%;
     height:80px;
     font-family: cursive;
     font-style:oblique;
