--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ main {
 
 header{
     width:100%;
-    height:80px;
+    height:120px;
     font-family: cursive;
     font-style:oblique;
     background-color:#1c2841;
@@ -54,8 +54,8 @@ header{
     background-image: url(https://www.csoalastrada.net/core-online/wp-content/uploads/2015/10/Roma-in-nero.jpg); 
     background-repeat:no-repeat ;
     background-size: cover;
+    background-position:-50px;
     padding:0.2px;
-    background-attachment: fixed;
     transition:ease-out;
     animation-name:container-image-outer;
     animation-duration: 3s;
@@ -79,15 +79,15 @@ header{
 @media  screen and (min-width: 250px) {
   div.section-title {
     height:auto;
-    background-attachment: unset;
+    
     
   }
 }
 
 @media  screen and (min-width: 750px) {
   div.section-title {
-    height:525px;
-    background-attachment: unset;
+    height:750px;
+    background-position: unset;
     
   }
 }
