--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,26 +20,16 @@ main {
 
 header{
     width:100%;
-    height:120px;
     font-family: cursive;
     font-style:oblique;
     background-color:#1c2841;
-    opacity: 1.5;
     padding:20px;
 }
 
-@media only screen and (min-width: 768px) {
-   header {
-    width: 100%;
-  }
+.brand{
+    font-size:3vw;
 }
 
-@media only screen and (max-width: 768px) {
-  ul.info {
-    word-spacing:0.5em;
-    
-  }
-}
 
 
  div  span{
@@ -67,7 +57,7 @@ header{
     
 }
 
- @keyframes container-image-outer  {
+@keyframes container-image-outer  {
     from{
         transform: scale(1);
     }
@@ -76,21 +66,7 @@ header{
     }
 }
 
-@media  screen and (min-width: 250px) {
-  div.section-title {
-    height:auto;
-    
-    
-  }
-}
 
-@media  screen and (min-width: 750px) {
-  div.section-title {
-    height:750px;
-    background-position: unset;
-    
-  }
-}
 
 
 
@@ -105,29 +81,17 @@ header{
     font-weight:lighter;
 }
 
-@media only screen and (max-width:700px) {
-  h1#subject {
-      font-size: 50px;
-    
-  }
-}
 
-.info{
-    float:right !important;
-    font-size: 15px;
-    word-spacing: 1.5em;
-    padding-right:10px;
-    margin-top:0;
-}
 
-.info a {
+
+.nav-item {
     color: white;
     font-family:'Times New Roman', Times, serif;
     font-size: 2vw;
     
 }
 
-.info a:hover { 
+.nav-item a:hover { 
     text-decoration: underline !important;
 }
 
@@ -147,8 +111,8 @@ li {
 .text_info {
      margin:0%;
      text-align:left;
-     font-weight: bold;
-     font-size: 20px;
+     font-weight:normal;
+     font-size: 1.2rem;
      color: white;
 } 
 
@@ -166,14 +130,6 @@ li {
     font-weight:unset;
 }
 
-@media screen and (max-width: 760px) {
-    img.image  {
-        height:180px;
-        width:250px;
-        margin:0px;
-        float:unset;
-  }
-}
 
 
 .section-container{
@@ -184,8 +140,10 @@ li {
     clear:both;
 }
 
+
 h2 {
     color:rgb(21 16 16 / 95%);
+    font-weight: bold;
 }
 
 .fa-map-pin{
@@ -195,7 +153,7 @@ h2 {
 
 #item1 {
     
-    background-color:rgb(53 65 76 / 80%);
+    background-color:rgb(116 143 169 / 80%);
 
    }
 
@@ -203,55 +161,45 @@ h2 {
 
 #item2{
     
-    background-color: rgb(71 74 90 / 90%);
+    background-color:rgb(45 52 86 / 90%)
     
 }
 
 #item3 {
     
-    background-color:#3a1f22c7;
+    background-color:#790714f2;
     
 }
 #item4 {
     
-    background-color: rgb(56 22 22 / 67%);
+    background-color:rgb(19 12 12 / 85%);
     
 }
                               
 #item5{
     
-    background-color:#602f3dc4;
+    background-color:#79374ae8
     
 }
 
                               /*footer styling*/  
 footer{
     color:white;
-    padding-top:10px;
-    height:120px;
+    padding:10px;
     width:100%;
     background-color:#1c2841;
     font-weight:lighter;
-    clear: both;
+    
 }       
 
 
 
 
  #footer{
-     font-size:1rem;
+     font-size:0.9rem;
      font-family:fantasy;
      font-style:italic;
      text-align: center;
-}
-
-
-
-@media only screen and (max-width: 1125px) {
-  footer {
-    height:auto;
-    
-  }
 }
 
 
@@ -283,21 +231,7 @@ footer{
     justify-content:center;
 }
 
-@media only screen and (max-width: 700px) {
-  section.layout {
-    height:auto;
-    margin:40px 10px 65px 0px;
-    background-image:none;
-  }
-}
 
-@media only screen and (max-width: 700px) {
-  body.wrapper {
-    background-image:url(https://render.fineartamerica.com/images/images-profile-flow/400/images/artworkimages/mediumlarge/2/colosseum-drawing-andrea-gatti.jpg);
-    background-repeat:no-repeat;
-    background-size:cover;
-  }
-}
 
 #footer-info{
      padding-top:10px;
@@ -305,13 +239,15 @@ footer{
 }    
 
  .signup-form{
+     height:550px;
+     width: 330px;
      color: #fff;
      background-color:rgba(60, 60, 60, 0.644);
      padding:50px;
      border: 1px solid black;
      left:60px;
      box-shadow:2px 2px black;
-     height:500px;
+     
  }
 
 
@@ -319,30 +255,19 @@ footer{
     opacity: 0;
 }
 
-
-
-.text-input{
-     font-size: 20px;
-     font-weight: bold;
-     vertical-align:middle;
-     
- }
-
-.message-input {
-    font-size: 20px;
-    padding-bottom: 80px;
-    margin-top: 30px;
-    width: 235px;
+#message {
+    height: 85px;
+    margin-top: 25px;
+    padding-bottom: 50px;
 }
 
-.join-button{
-     color:blue;
-     margin: 5px;
-     font-size:15px;
-     margin-left:40%;
-     cursor: pointer;
-     border-radius:3px;
- }
+
+
+
+.btn-primary{
+    margin-left:80px;
+    
+}
 
                                        /*---gallery.html styling---*/
 
@@ -350,11 +275,13 @@ footer{
     width:100%;
     height:auto;
     background-color:rgb(240 240 241);
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
  }
 
 .text-gallery{
-     text-align:center;
      text-shadow: 2px 0px gray;
      font-size: 70px;
  }
@@ -370,19 +297,6 @@ footer{
 }
 
 
-@media only screen and (max-width: 750px) {
-  div.image-gallery {
-    column-count:1;
-    display: inline;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  div.image-gallery{
-    column-count:2;
-
-  }
-}
 
 
 
@@ -403,13 +317,89 @@ footer{
 .photo-gallery:hover{
     box-shadow: 0px 0px  1px 2px rgba(19, 47, 102, 0.5);
 }
+
+
+
+@media only screen and (max-width: 768px) {
+  ul.info {
+    word-spacing:0.5em;
     
+  }
+}
+
+@media only screen and (min-width: 768px) {
+   header {
+    width: 100%;
+  }
+}   
+
+@media only screen and (max-width:700px) {
+  h1#subject {
+      font-size: 50px;
+    
+  }
+}
+
+@media screen and (max-width: 760px) {
+    img.image  {
+        height:180px;
+        width:250px;
+        margin:0px;
+        float:unset;
+  }
+}
 
 
 
 
+@media  screen and (min-width: 250px) {
+  div.section-title {
+    height: 400px;
+    background-position: center;
+  }
+}
 
+@media  screen and (min-width: 750px) {
+  div.section-title {
+    background-position: -10px;
+    
+  }
+}
 
+@media only screen and (max-width: 760px) {
+    div.section-container  {
+        padding:10px;
+}
+
+@media only screen and (max-width: 700px) {
+  section.layout {
+    height:auto;
+    margin:40px 10px 65px 0px;
+    background-image:none;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  body.wrapper {
+    background-image:url(https://render.fineartamerica.com/images/images-profile-flow/400/images/artworkimages/mediumlarge/2/colosseum-drawing-andrea-gatti.jpg);
+    background-repeat:no-repeat;
+    background-size:cover;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  div.image-gallery {
+    column-count:1;
+    display: inline;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  div.image-gallery{
+    column-count:2;
+
+  }
+}
 
 
      
