--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,257 +1,209 @@
-body   {
-    max-width: 100% !important; 
-    height:100%; 
-    margin:0px;
-    display:block;
-    
+body {
+    max-width: 100% !important;
+    margin: 0px;
+    display: block;
 }
-
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-
-
-                         /*  CSS multi-line  */
+/*--CSS multi-line--*/
 main {
     overflow: hidden;
 }
 
-header{
-    width:100%;
+header {
+    width: 100%;
     font-family: cursive;
-    font-style:oblique;
-    background-color:#1c2841;
-    padding:20px;
+    font-style: oblique;
+    background-color: #1c2841;
+    padding: 20px;
 }
 
-.brand{
-    font-size:3vw;
+.brand {
+    font-size: 3vw;
 }
 
-
-
- div  span{
-    color:rgb(229, 244, 247);
-    font-size:2.5vw;
-    text-align:left;
+div span {
+    color: rgb(229, 244, 247);
+    font-size: 2.5vw;
+    text-align: left;
 }
 
-.section-title{
-    width:100vw;
+.section-title {
+    width: 100vw;
     height: 595px;
-    background-image: url(https://www.csoalastrada.net/core-online/wp-content/uploads/2015/10/Roma-in-nero.jpg); 
-    background-repeat:no-repeat ;
+    background-image: url(https://www.csoalastrada.net/core-online/wp-content/uploads/2015/10/Roma-in-nero.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position:-50px;
-    padding:0.2px;
-    transition:ease-out;
-    animation-name:container-image-outer;
+    background-position: -50px;
+    padding: 0.2px;
+    transition: ease-out;
+    animation-name: container-image-outer;
     animation-duration: 3s;
-    animation-fill-mode:forwards;
- }
-
-#container-image-outer{
-    width: auto;
-    
+    animation-fill-mode: forwards;
 }
 
-@keyframes container-image-outer  {
-    from{
+#container-image-outer {
+    width: auto;
+}
+
+@keyframes container-image-outer {
+    from {
         transform: scale(1);
     }
-    to{
+    to {
         transform: scale(1.05);
     }
 }
 
-
-
-
-
-
-#subject{
-    margin-top:10px;
-    text-transform:capitalize;
-    font-size:70px;
-    font-style:italic;
+#subject {
+    margin-top: 10px;
+    text-transform: capitalize;
+    font-size: 70px;
+    font-style: italic;
     text-align: center;
     text-shadow: 2px 2px whitesmoke;
-    font-weight:lighter;
+    font-weight: lighter;
 }
-
-
-
 
 .nav-item {
     color: white;
-    font-family:'Times New Roman', Times, serif;
+    font-family: "Times New Roman", Times, serif;
     font-size: 2vw;
-    
 }
 
-.nav-item a:hover { 
+.nav-item a:hover {
     text-decoration: underline !important;
 }
 
-li {
-    display: inline-block;
+ul {
+    margin-left: 28vw;
 }
 
-
-.name{
-    font-family: 'Lobster', cursive;
-    font-size:25px;
-    text-align:center;
-    color:#070f25;
-    
+.name {
+    font-family: "Lobster", cursive;
+    font-size: 25px;
+    text-align: center;
+    color: #070f25;
 }
 
 .text_info {
-     margin:0%;
-     text-align:left;
-     font-weight:normal;
-     font-size: 1.2rem;
-     color: white;
-} 
-
-
-
-
-
-.image{
-    width:auto;
-    height:300px;
-    border-style:groove;
-    border-radius:20%;
-    float:right;
-    margin:13px;
-    font-weight:unset;
+    margin: 0%;
+    text-align: left;
+    font-weight: normal;
+    font-size: 1.2rem;
+    color: white;
 }
 
+.image {
+    width: auto;
+    height: 300px;
+    border-style: groove;
+    border-radius: 20%;
+    float: right;
+    margin: 13px;
+    font-weight: unset;
+}
 
-
-.section-container{
-    width:100%;
+.section-container {
+    width: 100%;
     min-height: 500px;
-    text-align:center;
-    padding:40px;
-    clear:both;
+    text-align: center;
+    padding: 40px;
+    clear: both;
 }
-
 
 h2 {
-    color:rgb(21 16 16 / 95%);
+    color: rgb(21 16 16 / 95%);
     font-weight: bold;
 }
 
-.fa-map-pin{
-    font-size:20px;
-    color:#007bff96;
+.fa-map-pin {
+    font-size: 20px;
+    color: #007bff96;
 }
 
 #item1 {
-    
-    background-color:rgb(116 143 169 / 80%);
+    background-color: rgb(116 143 169 / 80%);
+}
 
-   }
-
-
-
-#item2{
-    
-    background-color:rgb(45 52 86 / 90%)
-    
+#item2 {
+    background-color: rgb(45 52 86 / 90%);
 }
 
 #item3 {
-    
-    background-color:#790714f2;
-    
+    background-color: #790714f2;
 }
 #item4 {
-    
-    background-color:rgb(19 12 12 / 85%);
-    
-}
-                              
-#item5{
-    
-    background-color:#79374ae8
-    
+    background-color: rgb(19 12 12 / 85%);
 }
 
-                              /*footer styling*/  
-footer{
-    color:white;
-    padding:10px;
-    width:100%;
-    background-color:#1c2841;
-    font-weight:lighter;
-    
-}       
-
-
-
-
- #footer{
-     font-size:0.9rem;
-     font-family:fantasy;
-     font-style:italic;
-     text-align: center;
+#item5 {
+    background-color: #79374ae8;
 }
 
+/*--footer styling--*/
+footer {
+    color: white;
+    padding: 10px;
+    width: 100%;
+    background-color: #1c2841;
+    font-weight: lighter;
+}
+
+#footer {
+    font-size: 0.9rem;
+    font-family: fantasy;
+    font-style: italic;
+    text-align: center;
+}
 
 .icon-bar {
-    text-align:center;
+    text-align: center;
     margin-top: 10px;
 }
-.icon-bar a{
+.icon-bar a {
     color: white;
-    font-size:25px;
+    font-size: 25px;
     padding: 6px;
 }
 
 .icon-bar a:hover {
-    color: rgb(172, 172, 197);  
-    
+    color: rgb(172, 172, 197);
 }
-                                        /*--info.html styling--*/
+/*--contact.html styling--*/
 
-.layout{
-    width:100%;
-    height:100vh;
+.layout {
+    width: 100%;
+    height: 100vh;
     background-image: url(https://ulule.me/presales/6421/roma-29.jpeg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    margin-bottom:10px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+#footer-info {
+    padding-top: 10px;
+    height: 80px;
+}
 
+.signup-form {
+    height: 550px;
+    width: 330px;
+    color: #fff;
+    background-color: rgba(60, 60, 60, 0.644);
+    padding: 50px;
+    border: 1px solid black;
+    left: 60px;
+    box-shadow: 2px 2px black;
+}
 
-#footer-info{
-     padding-top:10px;
-     height:80px;
-}    
-
- .signup-form{
-     height:550px;
-     width: 330px;
-     color: #fff;
-     background-color:rgba(60, 60, 60, 0.644);
-     padding:50px;
-     border: 1px solid black;
-     left:60px;
-     box-shadow:2px 2px black;
-     
- }
-
-
- input:focus::-webkit-input-placeholder {
+input:focus::-webkit-input-placeholder {
     opacity: 0;
 }
 
@@ -261,147 +213,120 @@ footer{
     padding-bottom: 50px;
 }
 
-
-
-
-.btn-primary{
-    margin-left:80px;
-    
+.btn-primary {
+    margin-left: 80px;
 }
 
-                                       /*---gallery.html styling---*/
+/*--gallery.html styling---*/
 
-.layout-gallery{
-    width:100%;
-    height:auto;
-    background-color:rgb(240 240 241);
+.layout-gallery {
+    width: 100%;
+    height: auto;
+    background-color: rgb(240 240 241);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
- }
+}
 
-.text-gallery{
-     text-shadow: 2px 0px gray;
-     font-size: 70px;
- }
+.text-gallery {
+    text-shadow: 2px 0px gray;
+    font-size: 70px;
+}
 
-.image-gallery{   
-    column-count:3;
-    column-gap:2px;
+.image-gallery {
+    column-count: 3;
+    column-gap: 2px;
     margin: 0 0 2px 0;
-    cursor:pointer;
-    display:block;
-    line-height:10%;
-    
+    cursor: pointer;
+    display: block;
+    line-height: 10%;
 }
 
-
-
-
-
-
-
-.photo-gallery{
-    width:100%;
-    height:300px;
-    border:1px solid #d6c9c9;
-    border-radius:2px;
-    padding:5px;
-    
-    
+.photo-gallery {
+    width: 100%;
+    height: 300px;
+    border: 1px solid #d6c9c9;
+    border-radius: 2px;
+    padding: 5px;
 }
 
-
-
-.photo-gallery:hover{
-    box-shadow: 0px 0px  1px 2px rgba(19, 47, 102, 0.5);
+.photo-gallery:hover {
+    box-shadow: 0px 0px 1px 2px rgba(19, 47, 102, 0.5);
 }
 
-
-
-@media only screen and (max-width: 768px) {
-  ul.info {
-    word-spacing:0.5em;
-    
-  }
-}
+/*----responsive design------*/
 
 @media only screen and (min-width: 768px) {
-   header {
-    width: 100%;
-  }
-}   
+    header {
+        width: 100%;
+    }
+}
 
-@media only screen and (max-width:700px) {
-  h1#subject {
-      font-size: 50px;
-    
-  }
+@media only screen and (max-width: 700px) {
+    h1#subject {
+        font-size: 50px;
+    }
 }
 
 @media screen and (max-width: 760px) {
-    img.image  {
-        height:180px;
-        width:250px;
-        margin:0px;
-        float:unset;
-  }
+    img.image {
+        height: 180px;
+        width: 250px;
+        margin: 0px;
+        float: unset;
+    }
 }
 
-
-
-
-@media  screen and (min-width: 250px) {
-  div.section-title {
-    height: 400px;
-    background-position: center;
-  }
+@media screen and (max-width: 991px) {
+    ul {
+        margin-left: auto;
+    }
 }
 
-@media  screen and (min-width: 750px) {
-  div.section-title {
-    background-position: -10px;
-    
-  }
+@media screen and (min-width: 250px) {
+    div.section-title {
+        height: 400px;
+        background-position: center;
+    }
 }
 
-@media only screen and (max-width: 760px) {
-    div.section-container  {
-        padding:10px;
+@media screen and (min-width: 750px) {
+    div.section-title {
+        background-position: -10px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    div.section-container {
+        padding: 10px;
+    }
+}
+@media only screen and (max-width: 700px) {
+    section.layout {
+        height: auto;
+        margin: 40px 10px 65px 0px;
+        background-image: none;
+    }
 }
 
 @media only screen and (max-width: 700px) {
-  section.layout {
-    height:auto;
-    margin:40px 10px 65px 0px;
-    background-image:none;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  body.wrapper {
-    background-image:url(https://render.fineartamerica.com/images/images-profile-flow/400/images/artworkimages/mediumlarge/2/colosseum-drawing-andrea-gatti.jpg);
-    background-repeat:no-repeat;
-    background-size:cover;
-  }
+    body.wrapper {
+        background-image: url(https://render.fineartamerica.com/images/images-profile-flow/400/images/artworkimages/mediumlarge/2/colosseum-drawing-andrea-gatti.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
 
 @media only screen and (max-width: 750px) {
-  div.image-gallery {
-    column-count:1;
-    display: inline;
-  }
+    div.image-gallery {
+        column-count: 1;
+        display: inline;
+    }
 }
 
 @media only screen and (max-width: 1025px) {
-  div.image-gallery{
-    column-count:2;
-
-  }
+    div.image-gallery {
+        column-count: 2;
+    }
 }
-
-
-     
-
- 
