--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header {
     font-size: 3vw;
 }
 
-div span {
+.brand p {
     color: rgb(229, 244, 247);
     font-size: 2.5vw;
     text-align: left;
