--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,3 +330,22 @@ input:focus::-webkit-input-placeholder {
         column-count: 2;
     }
 }
+
+@media only screen and (max-width: 550px) {
+    div.image-gallery {
+        column-count: 1;
+    }
+}
+
+@media only screen and (max-width:780px ) {
+    .navbar-nav {
+        float:right;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .navbar-toggler {
+        position: relative;
+        left:16px;
+    }
+}
